fix main links, add spacing to footer, clean up markup

--- a/style.css
+++ b/style.css
@@ -454,3 +454,6 @@ footer {
 	height: auto;
 }
 
+.site-footer {
+	margin: 3em 0;
+}
